// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookHourChoice should display filtered stocks for selected Date 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "color": "#151515",
          "fontFamily": "Montserrat-Medium",
          "fontSize": 18,
          "lineHeight": 22,
        },
      ]
    }
    testID="HourStep"
  >
    Heure
  </Text>,
  <View
    numberOfSpaces={2}
    style={
      Array [
        Object {
          "height": 8,
        },
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginHorizontal": -8,
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "33%",
        }
      }
      testID="HourChoice148409"
    >
      <View
        selected={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#626262",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 1,
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingHorizontal": 13,
            },
          ]
        }
      >
        <View
          numberOfSpaces={5}
          style={
            Array [
              Object {
                "width": 20,
              },
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "paddingVertical": 20,
              },
            ]
          }
        >
          <Text
            color="#151515"
            style={
              Array [
                Object {
                  "color": "#151515",
                  "fontFamily": "Montserrat-Bold",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ]
            }
            testID="HourChoice148409-hour"
          >
            20h00
          </Text>
          <Text
            color="#151515"
            style={
              Array [
                Object {
                  "color": "#151515",
                  "fontFamily": "Montserrat-SemiBold",
                  "fontSize": 12,
                  "lineHeight": 16,
                },
              ]
            }
            testID="HourChoice148409-price"
          >
            24€
          </Text>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "33%",
        }
      }
      testID="HourChoice148411"
    >
      <View
        selected={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#626262",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 1,
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingHorizontal": 13,
            },
          ]
        }
      >
        <View
          numberOfSpaces={5}
          style={
            Array [
              Object {
                "width": 20,
              },
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "paddingVertical": 20,
              },
            ]
          }
        >
          <Text
            color="#151515"
            style={
              Array [
                Object {
                  "color": "#151515",
                  "fontFamily": "Montserrat-Bold",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ]
            }
            testID="HourChoice148411-hour"
          >
            10h00
          </Text>
          <Text
            color="#151515"
            style={
              Array [
                Object {
                  "color": "#151515",
                  "fontFamily": "Montserrat-SemiBold",
                  "fontSize": 12,
                  "lineHeight": 16,
                },
              ]
            }
            testID="HourChoice148411-price"
          >
            24€
          </Text>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`BookHourChoice when hour is already selected should change step to Hour and reset quantity 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "color": "#151515",
          "fontFamily": "Montserrat-Medium",
          "fontSize": 18,
          "lineHeight": 22,
        },
      ]
    }
    testID="HourStep"
  >
    Heure
  </Text>,
  <View
    numberOfSpaces={2}
    style={
      Array [
        Object {
          "height": 8,
        },
      ]
    }
  />,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#151515",
            "fontFamily": "Montserrat-Bold",
            "fontSize": 15,
            "lineHeight": 20,
          },
        ]
      }
    >
      20:00
    </Text>
  </View>,
]
`;
